[package]
name = "ve_exporter"
version = "0.1.0"
authors = ["Finn Behrens <me@kloenk.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "completion" ]
completion = []

[dependencies]


[[bin]]
name = "ve-exporter"
path = "src/main.rs"
