[package]
name = "ve_exporter"
version = "0.1.1"
authors = ["Finn Behrens <me@kloenk.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "completion" ]
completion = []

[dependencies]
clap = { version = "2.33.0", features = ["color"] }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
env_logger = "0.6.2"
serde = "1.0"
serde_json = "1.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
futures = "0.3.1"
#tokio-serial = "4.3.3"
tokio = "0.2.13"
handlebars = "2.0.0"

[dependencies.reqwest]
version = "0.10"
default-features = false
features = [ "rustls-tls", "gzip" ]

# ve mod
bitflags = "1.2.1"


[[bin]]
name = "ve-exporter"
path = "src/main.rs"
